src/index.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;1,600&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Jersey+10&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

/* TEMP FIX*/ 
/* TODO: */
h1 {
    font-family: 'Jersey 10', sans-serif;
}

.font-montserrat {
    font-family: 'Montserrat', sans-serif;
}

